[gd_scene load_steps=6 format=2]

[ext_resource path="res://AudioSettings.gd" type="Script" id=1]
[ext_resource path="res://Action RPG Resources/Music and Sounds/Music.mp3" type="AudioStream" id=2]
[ext_resource path="res://ButtonNormal.tres" type="StyleBox" id=3]
[ext_resource path="res://Action RPG Resources/DiscordRPC/MainMenu/MainMenu.tscn" type="PackedScene" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.517647, 0.517647, 0.517647, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.203922, 0.203922, 0.203922, 1 )
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1
anti_aliasing = false

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 256.0
margin_bottom = 150.0
color = Color( 0, 1, 0.156863, 1 )

[node name="HSlider" type="HSlider" parent="."]
margin_left = 32.0
margin_top = 64.0
margin_right = 224.0
margin_bottom = 104.0
custom_styles/slider = SubResource( 1 )
min_value = -80.0
max_value = 0.0

[node name="Label" type="Label" parent="."]
margin_left = 32.0
margin_top = 48.0
margin_right = 224.0
margin_bottom = 73.0
text = "Music"
align = 1
valign = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
autoplay = true
bus = "Music"

[node name="MainMenu" type="Button" parent="."]
margin_left = 56.0
margin_top = 112.0
margin_right = 200.0
margin_bottom = 143.0
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/normal = ExtResource( 3 )
text = "Return"

[node name="Node2D" parent="." instance=ExtResource( 4 )]
position = Vector2( 40, 152 )

[connection signal="value_changed" from="HSlider" to="." method="_on_HSlider_value_changed"]
[connection signal="pressed" from="MainMenu" to="." method="_on_MainMenu_pressed"]
